--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -15,15 +15,29 @@
         android:background="@color/f1"
         >
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_track_list"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/sr_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/f1"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             viewModel="@{vm}"
-            items="@{vm.lvMyTracksList}"
-            />
+            isRefreshing="@{vm.lvIsRefresh}"
+            >
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_track_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/f1"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                viewModel="@{vm}"
+                items="@{vm.lvMyTracksList}"
+                />
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
             android:id="@+id/btn_add"
