- Progress, Track, Detail Layouts are Modified.

--- a/app/src/main/res/layout/item_progress.xml
+++ b/app/src/main/res/layout/item_progress.xml
@@ -88,6 +88,7 @@
                     style="@style/TextView"
                     android:id="@+id/tv_location_name"
                     android:hint="@string/location"
+                    android:gravity="right"
                     android:textColor="@color/b1"
                     android:textSize="13dp"
                     tools:text="@{item.location.name}"
@@ -99,6 +100,7 @@
                     style="@style/TextView"
                     android:id="@+id/tv_time"
                     android:hint="@string/time"
+                    android:gravity="right"
                     android:textSize="10dp"
                     android:textColor="@color/b1"
                     tools:text="=@{item.time}"
@@ -110,7 +112,8 @@
                     style="@style/TextView"
                     android:id="@+id/tv_status"
                     android:hint="@string/now_status"
-                    android:textSize="17dp"
+                    android:gravity="left"
+                    android:textSize="19dp"
                     android:textColor="@color/b1"
                     android:textStyle="bold"
                     tools:text="@{item.status.text}"
@@ -122,9 +125,10 @@
                     style="@style/TextView"
                     android:id="@+id/tv_description"
                     android:hint="@string/description"
+                    android:gravity="left"
                     android:textSize="12dp"
                     android:textColor="@color/b1"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="6dp"
                     tools:text="@{item.description}"
                     app:layout_constraintTop_toBottomOf="@+id/tv_status"
                     app:layout_constraintLeft_toLeftOf="parent"
