--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -34,6 +34,7 @@
             android:textSize="24dp"
             android:textColor="@color/f1"
             android:textStyle="bold"
+            android:singleLine="true"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent" />
 
