- Modify font size and UI

--- a/app/src/main/res/layout/item_progress.xml
+++ b/app/src/main/res/layout/item_progress.xml
@@ -90,7 +90,7 @@
                     android:hint="@string/location"
                     android:gravity="right"
                     android:textColor="@color/b1"
-                    android:textSize="13dp"
+                    android:textSize="14sp"
                     tools:text="@{item.location.name}"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
@@ -101,7 +101,7 @@
                     android:id="@+id/tv_time"
                     android:hint="@string/time"
                     android:gravity="right"
-                    android:textSize="10dp"
+                    android:textSize="12sp"
                     android:textColor="@color/b1"
                     tools:text="=@{item.time}"
                     app:layout_constraintTop_toBottomOf="@+id/tv_location_name"
@@ -113,7 +113,7 @@
                     android:id="@+id/tv_status"
                     android:hint="@string/now_status"
                     android:gravity="left"
-                    android:textSize="19dp"
+                    android:textSize="20sp"
                     android:textColor="@color/b1"
                     android:textStyle="bold"
                     tools:text="@{item.status.text}"
@@ -126,7 +126,7 @@
                     android:id="@+id/tv_description"
                     android:hint="@string/description"
                     android:gravity="left"
-                    android:textSize="12dp"
+                    android:textSize="13sp"
                     android:textColor="@color/b1"
                     android:layout_marginTop="6dp"
                     tools:text="@{item.description}"
