--- a/app/src/main/res/layout/item_progress_empty.xml
+++ b/app/src/main/res/layout/item_progress_empty.xml
@@ -20,9 +20,9 @@
             style="@style/EditText"
             android:id="@+id/tv_carrier_name"
             android:gravity="center"
-            android:text="@string/empty_progress_list"
-            android:singleLine="true"
+            android:text="@string/msg_empty_progress_list"
             android:textColor="@color/c1"
+            android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
